重构场景对象

--- a/打砖块/fun.html
+++ b/打砖块/fun.html
@@ -24,17 +24,18 @@
     <hr>
     <input type="range" id="id-speed-contral" value="1">
 
-    <!-- 工具文件 -->
-    <script src="./utils.js"></script>
+    
     <!-- guagame文件 -->
     <script src="./guagame/guagame.js"></script>
-    <script src="./guagame/ball.js"></script>
-    <script src="./guagame/block.js"></script>
-    <script src="./guagame/pannel.js"></script>
+    <script src="./guagame/gua_scene.js"></script>
+    <script src="./guagame/utils.js"></script>
     <!-- 场景文件 -->
-    <script src="./scene/titleScene.js"></script>
-    <script src="./scene/overScene.js"></script>
-    <script src="./scene/scene.js"></script>
+    <script src="./scene/begin/titleScene.js"></script>
+    <script src="./scene/end/overScene.js"></script>
+    <script src="./scene/main/Ball.js"></script>
+    <script src="./scene/main/block.js"></script>
+    <script src="./scene/main/pannel.js"></script>
+    <script src="./scene/main/scene.js"></script>
     <!-- 数据文件 -->
     <script src="./level.js"></script>
     <!-- 主文件 -->
