--- a/打砖块/fun.html
+++ b/打砖块/fun.html
@@ -26,6 +26,7 @@
 
     
     <!-- guagame文件 -->
+    <script src="./guagame/drag.js"></script>
     <script src="./guagame/guagame.js"></script>
     <script src="./guagame/gua_scene.js"></script>
     <script src="./guagame/utils.js"></script>
