--- a/打砖块/fun.html
+++ b/打砖块/fun.html
@@ -23,7 +23,10 @@
     <canvas id="m-canvas" width="600" height="400"></canvas>
     <hr>
     <input type="range" id="id-speed-contral" value="1">
-
+    <p style="margin-left:100px;color:#f40;margin-top:30px">游戏说明: f 发射小球 ,   g 重新开始游戏 ,  
+        1,2,3,4选择关卡   ,<br>下面的滑条改变速度
+        每撞击一下砖块, 获得100分,  小球到达下边框代表失败     
+    </p>
     
     <!-- guagame文件 -->
     <script src="./guagame/drag.js"></script>
